#####################################
Major Changes between 1.4.x and ...
-------------------------------------
$Id$

RRD Graph
---------
* GRAD element for graph, it acts more or less like an AREA,
  except you can specify a second color and a height which is used to
  create a gradient from one color to the next
  by Rian Shelley




#####################################
Major Changes between 1.3.x and 1.4.x
-------------------------------------

RRD Caching Daemon (rrdcached)
------------------------------
by Florian Forster and Kevin Brintnall

The RRD Caching Daemon can dramatically improve the 'update' performance
of your system.  Due to file handling overheads, the time it takes todo one
update is virtually the same as to doing two updates in a row.

The Cache Daemon intercepts rrdtool update calls, assembling multiple
updates before writing them to the actual rrd file. When calling rrdtool
graph in such a setup, the command will tell the daemon to flush out all
pending updates for the rrd files, required to draw the graph.

See rrdcached documentation.

RRD Dumping and Restoring (rrdtool dump/restore)
------------------------------------------------
by Tobi Oetiker

The output of rrdtool dump has been adjusted to be simpler to parse by
existing xml parsers.

The restore core has been completely re-written yet again and is now relying
on an incremental xml parser. This has the advantage that the memory
consumption while restoring xml files is only slightly larger than the
resulting rrd file. Which is much less than the requirements of the 1.3 and
even 1.2

RRD Graphing functions (rrdtool graph)
--------------------------------------
by Martin Sperl

* VDEF PERCENTNAN (a PRECENT that ignores NAN)

* CDEF PREDICT and PREDICTSIGMA functions for on-the-fly
  data prediction without the need to modify existing rrd files as it is
  required for HoltWinters.

* LibDBI integration provides a path to read data directly of a supported